- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.15.0
- 
        
- 
        817ca3026349d7c303d9b6b66ba36f2ea1b5bfd5 (qt/qtbase/5.15)
Configuring Qt with "no-ssl xplatform winrt-arm-msvc2017" results in compiler errors. Dropping "no-ssl" from the configuration fixes the problem.
Errors:
Generating Code...
        cl -c -FI..\corelib\global\qt_pch.h -Yu..\corelib\global\qt_pch.h -Fp.pch\debug\Qt5Networkd_pch.pch -nologo -FS -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:__cplusplus -Zi -MDd -std:c++17 -utf-8 /wd4530 /wd4577 -GR -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 /Fd.obj\debug\Qt5Networkd.vc.pdb -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DQ_BYTE_ORDER=Q_LITTLE_ENDIAN -D_ENABLE_EXTENDED_ALIGNED_STORAGE -DWINAPI_FAMILY=WINAPI_FAMILY_PC_APP -DWINAPI_PARTITION_PHONE_APP=1 -DARM -D__ARM__ -D__arm__ -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_LOCALSOCKET_TCP -DQT_USE_SYSTEM_PROXIES -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_NETWORK_LIB -DQT_BUILDING_QT -D_CRT_SECURE_NO_WARNINGS -D_USE_MATH_DEFINES -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_CORE_LIB -DQT_CORE_LIB -DQT_NO_EXCEPTIONS -D_WINDLL -IC:\Git\qt5\qtbase\src\network -I. -IC:\Git\qt5\qtbase\src\3rdparty\zlib\src -IC:\Git\qt5\qtbase\src\network\kernel -I..\..\include -I..\..\include\QtNetwork -I..\..\include\QtNetwork\5.15.0 -I..\..\include\QtNetwork\5.15.0\QtNetwork -Itmp -I..\..\include\QtCore\5.15.0 -I..\..\include\QtCore\5.15.0\QtCore -I..\..\include\QtCore -I.moc\debug -IC:\Git\qt5\qtbase\mkspecs\winrt-arm-msvc2017 -Fo.obj\debug\ @C:\Users\mipernu\AppData\Local\Temp\nm8A48.tmp
qasn1element.cpp
qssl.cpp
qsslcertificate.cpp
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(105): error C2079: 'QSslConfigurationPrivate::privateKey' uses undefined class 'QSslKey'
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(106): error C3646: 'sessionCipher': unknown override specifier
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(106): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(108): error C2065: 'QSslCipher': undeclared identifier
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(108): error C2923: 'QList': 'QSslCipher' is not a valid template type argument for parameter 'T'
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(108): error C2955: 'QList': use of class template requires template argument list
c:\git\build\include\qtcore\../../../qt5/qtbase/src/corelib/kernel/qmetatype.h(2254): note: see declaration of 'QList'
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(112): error C2653: 'QSslSocket': is not a class or namespace name
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(112): error C3646: 'peerVerifyMode': unknown override specifier
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(112): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(125): error C3646: 'dhParams': unknown override specifier
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(125): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(132): error C2079: 'QSslConfigurationPrivate::ephemeralServerKey' uses undefined class 'QSslKey'
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(138): error C2027: use of undefined type 'QSslConfiguration'
c:\git\build\include\qtnetwork\../../../qt5/qtbase/src/network/access/qnetworkrequest.h(51): note: see declaration of 'QSslConfiguration'
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(138): error C3646: 'nextProtocolNegotiationStatus': unknown override specifier
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(138): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(88): error C2653: 'QSslSocket': is not a class or namespace name
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(88): error C2065: 'AutoVerifyPeer': undeclared identifier
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(93): error C2653: 'QSslDiffieHellmanParameters': is not a class or namespace name
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(93): error C3861: 'defaultParameters': identifier not found
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(97): error C2027: use of undefined type 'QSslConfiguration'
c:\git\build\include\qtnetwork\../../../qt5/qtbase/src/network/access/qnetworkrequest.h(51): note: see declaration of 'QSslConfiguration'
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(97): error C2065: 'NextProtocolNegotiationNone': undeclared identifier
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(98): error C2512: 'QList': no appropriate default constructor available
c:\git\build\include\qtcore\../../../qt5/qtbase/src/corelib/kernel/qmetatype.h(2254): note: see declaration of 'QList'
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(88): error C2614: 'QSslConfigurationPrivate': illegal member initialization: 'peerVerifyMode' is not a base or member
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(93): error C2614: 'QSslConfigurationPrivate': illegal member initialization: 'dhParams' is not a base or member
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(97): error C2614: 'QSslConfigurationPrivate': illegal member initialization: 'nextProtocolNegotiationStatus' is not a base or member
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(162): error C2027: use of undefined type 'QSslConfiguration'
c:\git\build\include\qtnetwork\../../../qt5/qtbase/src/network/access/qnetworkrequest.h(51): note: see declaration of 'QSslConfiguration'
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(163): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(164): error C2550: '{ctor}': constructor initializer lists are only allowed on constructor definitions
c:\git\qt5\qtbase\src\network\ssl\qsslconfiguration_p.h(165): warning C4508: '{ctor}': function should return a value; 'void' return type assumed
c:\git\qt5\qtbase\src\network\ssl\qocspresponse.h(50): error C2338: Required feature ssl for file c:\git\qt5\qtbase\src\network\ssl\qocspresponse.h not available.
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(95): error C2143: syntax error: missing ';' before '*'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(95): error C7524: 'inline' specifier cannot appear on a block-scope declaration or non-static data member
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(95): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(95): error C2334: unexpected token(s) preceding '{'; skipping apparent function body
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(104): error C2027: use of undefined type 'QSslSocket'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(95): note: see declaration of 'QSslSocket'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(104): error C3646: 'mode': unknown override specifier
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(104): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(130): error C2065: 'QSslCipher': undeclared identifier
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(130): error C2923: 'QList': 'QSslCipher' is not a valid template type argument for parameter 'T'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(130): error C2955: 'QList': use of class template requires template argument list
c:\git\build\include\qtcore\../../../qt5/qtbase/src/corelib/kernel/qmetatype.h(2254): note: see declaration of 'QList'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(131): error C2065: 'QSslCipher': undeclared identifier
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(131): error C2923: 'QList': 'QSslCipher' is not a valid template type argument for parameter 'T'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(131): error C2955: 'QList': use of class template requires template argument list
c:\git\build\include\qtcore\../../../qt5/qtbase/src/corelib/kernel/qmetatype.h(2254): note: see declaration of 'QList'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(132): error C2065: 'QSslCipher': undeclared identifier
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(132): error C2923: 'QList': 'QSslCipher' is not a valid template type argument for parameter 'T'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(132): error C2955: 'QList': use of class template requires template argument list
c:\git\build\include\qtcore\../../../qt5/qtbase/src/corelib/kernel/qmetatype.h(2254): note: see declaration of 'QList'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(133): error C2065: 'QSslCipher': undeclared identifier
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(133): error C2923: 'QList': 'QSslCipher' is not a valid template type argument for parameter 'T'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(133): error C2955: 'QList': use of class template requires template argument list
c:\git\build\include\qtcore\../../../qt5/qtbase/src/corelib/kernel/qmetatype.h(2254): note: see declaration of 'QList'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(154): error C2327: 'QSslSocketPrivate::QSslSocket': is not a type name, static, or enumerator
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(155): error C2327: 'QSslSocketPrivate::QSslSocket': is not a type name, static, or enumerator
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(157): error C2327: 'QSslSocketPrivate::QSslSocket': is not a type name, static, or enumerator
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(158): error C2327: 'QSslSocketPrivate::QSslSocket': is not a type name, static, or enumerator
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(191): error C3646: 'sessionCipher': unknown override specifier
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(191): error C2059: syntax error: ')'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_p.h(191): error C2238: unexpected token(s) preceding ';'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(77): error C2327: 'QSslSocketPrivate::QSslSocket': is not a type name, static, or enumerator
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(88): error C3646: 'sessionCipher': unknown override specifier
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(88): error C2059: syntax error: '('
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(88): error C2238: unexpected token(s) preceding ';'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(92): error C2065: 'QSslCipher': undeclared identifier
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(92): error C2923: 'QList': 'QSslCipher' is not a valid template type argument for parameter 'T'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(92): error C2955: 'QList': use of class template requires template argument list
c:\git\build\include\qtcore\../../../qt5/qtbase/src/corelib/kernel/qmetatype.h(2254): note: see declaration of 'QList'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(77): error C2061: syntax error: identifier 'QSslSocket'
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(77): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
c:\git\qt5\qtbase\src\network\ssl\qsslsocket_winrt_p.h(77): error C2146: syntax error: missing '>' before identifier 'QSslSocket'
qsslcertificateextension.cpp
qsslcertificate_qt.cpp
qpassworddigestor.cpp
Generating Code...
NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\bin\HostX86\ARM\cl.EXE"' : return code '0x2'
Stop.
NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\bin\HostX86\x86\nmake.exe"' : return code '0x2'
Stop.
NMAKE : fatal error U1077: 'cd' : return code '0x2'
Stop.
NMAKE : fatal error U1077: 'cd' : return code '0x2'
Stop.
| For Gerrit Dashboard: QTBUG-85765 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 308823,2 | winrt: Fix build with -no-ssl | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |