winrt: Fix build with -no-ssl

Fixes: QTBUG-85765
Change-Id: I1e062c8371079e946b3bbf91f0171a1ead759da6
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>